<resources>
    <string name="app_name">LostMyPet</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="Logo">logo</string>

    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must have >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>

    <!-- Strings related to profile -->
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="username">Username</string>
    <string name="hello">Hello</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_announcement">Add announcement</string>
    <string name="my_announcements">My announcements</string>
    <string name="all_announcements">All announcements</string>
    <string name="favorites">Favorites</string>
    <string name="log_out">Log out</string>
    <string name="messages">Messages</string>
    <string name="title_add_announcement_activity">AddAnnouncementActivity</string>
    <string name="icon_dog">Icon dog</string>
    <string name="scrollview">ScrollView</string>

    <!-- announcements -->
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unknown">Unknown</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="give_away">Give Away</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="rabbit">Rabbit</string>
    <string name="bird">Bird</string>
    <string name="other">Other</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="description">Description</string>
    <string name="example_breed">Example: labrador</string>
    <string name="pet_image_description">The image of the pet</string>
    <string name="add_image">Add image</string>
    <string name="add_location">Add location</string>
    <string name="coordinates">Coordinates</string>
    <string name="done">Done</string>

    <!-- mapbox -->
    <string name="mapbox_access_token">sk.eyJ1IjoiY2F0YWxpbmFhYTE4IiwiYSI6ImNsMmdmYXZpazAzZXEzZHFobzlybDQwZm4ifQ.P1yzS_0pg-IyjHBzNwbqGA</string>
    <string name="see_route">See route</string>
    <string name="satellite_view">Satellite view</string>
    <string name="streets_view">Streets view</string>
    <string name="save_location">Save location</string>


    <string name="phone">Phone</string>
    <string name="background_image_description">background image</string>
    <string name="btn_change_picture_description">button to change the user image</string>
    <string name="animal">Animal</string>
    <string name="type">Type</string>
    <string name="more">More</string>
    <string name="city">City</string>
    <string name="gender_symbol_description">Gender symbol</string>
    <string name="imtbn_favorite_description">A heart button to add announcement do favourites.</string>
    <string name="have_you_seen_it">Have you seen it?</string>
    <string name="add_location_on_map">Add location \n on map</string>
    <string name="or">or</string>
    <string name="go_to_comments">Go to \n comments</string>
    <string name="delete_my_locations">Delete my locations</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="change_image">Change image</string>
    <string name="change_location">Change location</string>
    <string name="update">Update</string>
    <string name="delete_all_locations">Delete all locations</string>
    <string name="see_location">See location \n on map</string>
    <string name="save_changes">Save changes</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="search_by_city">Search by city</string>
    <string name="date">Date</string>
    <string name="message">Message</string>
    <string name="user_image_description">The user image.</string>
    <string name="imbtn_delete_description">A recycle bin button to delete the post.</string>
    <string name="write_your_comment">Write your comment..</string>
    <string name="send">Send</string>
    <string name="announcements">Announcements</string>
    <string name="delete_location">Delete location</string>
    <string name="update_information">Update information</string>
    <string name="update_password">Update password</string>
    <string name="romanian">Romanian</string>
    <string name="english">English</string>
    <string name="select_language">Select language</string>

    //toasts

    <string name="auth_success">Authentication success.</string>
    <string name="email_not_verified">Email is not verified.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="warning_enter_email">You should enter an email!</string>
    <string name="warning_enter_password">You should enter a password!</string>
    <string name="failed_resent_verify_registered_email">Failed to send reset email! Verify your registered email!</string>
    <string name="we_sent_reset_password_email">We have sent an email with instructions to reset your password!</string>
    <string name="almost_done">Almost done</string>
    <string name="warning_enter_registered_email">You should enter your registered email!</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_conditions">Your passwords should have at least 6 characters and a mix of letters and numbers</string>
    <string name="invalid_phone">Invalid Phone</string>
    <string name="warning_enter_username">You should enter an username!</string>
    <string name="we_sent_confirmation_email">We have sent an email with a confirmation link to your email address. Open it up to activate your account.</string>
    <string name="email_sent">Email sent!</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="warning_enter_name">You should enter a name</string>
    <string name="warning_enter_description">You should enter a description</string>
    <string name="warning_enter_location">You should enter a location</string>
    <string name="announcement_inserted">Announcement inserted</string>
    <string name="insertion_failed">Insertion failed</string>
    <string name="explanation_location_permission">You should grant this permission to see your current location!</string>
    <string name="warning_select_place">You should select a place on the map.</string>
    <string name="current_location_not_found">The current location could not be found.</string>
    <string name="current_location_not_found_permission">The current location could not be found because the permission is not granted.</string>
    <string name="warning_enter_text">You should enter some text!</string>
    <string name="comment_inserted">Comment inserted</string>
    <string name="pet_image_missing">The pet image does not exist or could not be loaded.</string>
    <string name="announcement_updated">Announcement updated</string>
    <string name="missing_profile_image">The user does not have a profile image or it could not be loaded.</string>
    <string name="location_point_inserted">Location point inserted</string>
    <string name="location_points_removed">Location points removed</string>
    <string name="removal_failed">Removal failed</string>
    <string name="be_careful">Be careful!</string>
    <string name="warning_at_least_one_point_on_map">You should have at least one point on the map so the other users know where your pet can be.</string>
    <string name="cancel">Cancel</string>
    <string name="changes_not_saved">Your changes are not saved!</string>
    <string name="warning_enter_old_password">You should enter the old password!</string>
    <string name="warning_same_passwords">The new password should be different!</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="email_updated">Email updated!</string>
    <string name="we_send_update_email">We have sent an email with a confirmation link to your email address. Open it up to update your account.</string>
    <string name="email_could_not_update">Email could not be updated!</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="password_updated">Password updated!</string>
    <string name="missing_user_image">The user image could not be loaded.</string>
    <string name="announcement_added_to_fav">Announcement added to favorite</string>
    <string name="announcement_removed_from_fav">Announcement removed from favorite</string>
    <string name="password_needed">Password needed!</string>
    <string name="warning_password_update">You have to enter your password to apply changes!</string>
    <string name="warning_delete_announcement">Are you sure you want to delete this announcement?</string>
    <string name="warning_delete_comment">Are you sure you want to delete this comment?</string>
    <string name="comment_deleted">Comment deleted!</string>
    <string name="image_updated">User image updated</string>
    <string name="delete_account">Delete account</string>
    <string name="warning_delete_account">Are you sure you want to delete your account? Your announcements will be deleted too.</string>
</resources>