<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imv_user"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:civ_border_color="@color/light_orange_1"
        app:civ_border_width="6dp"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_orange_1"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="6dp">


                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sunshiney"
                        android:hint="@string/username"
                        android:textColor="@color/dark_orange"
                        android:textSize="@dimen/text_size_22"
                        android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:fontFamily="cursive"
                    android:hint="@string/date"
                    android:textColor="@color/dark_orange"
                    android:textSize="11sp"
                    android:textStyle="bold"/>

                <TextView
                        android:id="@+id/tv_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/sunshiney"
                        android:hint="@string/message"
                        android:textColor="@color/dark_orange"
                        android:textSize="@dimen/text_size_22"
                        app:drawableTint="@color/dark_orange" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imbtn_delete_description"
            android:text="@string/delete"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/sunshiney"
            android:textSize="17sp"
            android:textColor="@color/dark_orange"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/ic_delete"
            app:drawableTint="@color/dark_orange" />

    </LinearLayout>


</LinearLayout>