<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical"
    tools:context=".fragments.UpdateUserInfoFragment">


    <ImageView
        android:id="@+id/imv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/Logo"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/email"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/sunshiney"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="phone"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/sunshiney"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/email"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/sunshiney"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/selector_simple_button"
        android:drawableStart="@drawable/ic_paw"
        android:drawableEnd="@drawable/ic_paw"
        android:drawableTint="@color/dark_orange_alpha"
        android:fontFamily="@font/sunshiney"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textColor="@color/white_alpha"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/selector_simple_button"
        android:drawableStart="@drawable/ic_paw"
        android:drawableEnd="@drawable/ic_paw"
        android:drawableTint="@color/dark_orange_alpha"
        android:fontFamily="@font/sunshiney"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white_alpha"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />


</LinearLayout>